@@ -10,6 +10,8 @@ Bug Handling
 Features
 --------
 
+* Added UdpOutput.
+
 0.6.1 (2014-MM-DD)
 ==================
 
